--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .main_div {
     width: 960px;
     /*height: 2000px;*/
-    border: solid 2px salmon;
+    /*border: solid 2px salmon;*/
     background-color: #F1F1F1;
     margin: auto;
     }
@@ -51,8 +51,8 @@
     height: 100vh;
     display: flex;
     background: linear-gradient(
-        rgba(138, 98, 17, 0.6),
-        rgba(60, 40, 0, 0.6)
+        rgba(5, 42, 66, 0.6),
+        rgba(0, 38, 60, 0.6)
       ), url("https://images.unsplash.com/photo-1667645336934-14f086562b49?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80") no-repeat center fixed;
     background-size: cover;
     align-items: center;
@@ -64,9 +64,10 @@
     width: 577px;
     height: 215px;
     padding-left: 94px;
+    padding-right: 94px;
     /*align-items: center;*/
     flex-direction: column;
-    border: solid 2px salmon;
+    /*border: solid 2px salmon;*/
     color:white;
     scroll-behavior: smooth;
 }
@@ -120,10 +121,8 @@
     }
 
 
-.page-content {
-    margin-top:51px;
-    padding-left: 94px;
-    padding-right: 94px;
+.about-content {
+    padding: 51px 94px 51px 94px;
 }
 
 
@@ -131,34 +130,34 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 68px;
+    padding-top: 68px;
 }
 
 
-.employee:nth-child(odd) {
+.employee:nth-of-type(odd) {
     flex-direction: row;
     text-align: left;
 }
 
 
-.employee:nth-child(even) {
+.employee:nth-of-type(even) {
     flex-direction: row-reverse;
     text-align: right;
 }
 
 
-.employee:nth-child(odd) .employee-bio  {
+.employee:nth-of-type(odd) .employee-bio  {
     margin-left: 60px;
 }
 
 
-.employee:nth-child(even) .employee-bio  {
+.employee:nth-of-type(even) .employee-bio  {
     margin-right: 60px;
 }
 
 
 .employee-pic-1 {
-    flex: 0 0 200px;
+    flex: 0 0 197px;
     background-image: url("../media/horace.png");
     background-position: center;
     background-size: cover;
@@ -168,7 +167,7 @@
 }
 
 .employee-pic-2 {
-    flex: 0 0 200px;
+    flex: 0 0 197px;
     background-image: url("../media/minerva.jpg");
     background-position: center;
     background-size: cover;
@@ -178,7 +177,7 @@
 }
 
 .employee-pic-3 {
-    flex: 0 0 200px;
+    flex: 0 0 197px;
     background-image: url("../media/mugwump.png");
     background-position: center;
     background-size: cover;
@@ -188,7 +187,7 @@
 }
 
 .employee-pic-4 {
-    flex: 0 0 200px;
+    flex: 0 0 197px;
     background-image: url("../media/snivellus.jpeg");
     background-position: center;
     background-size: cover;
@@ -212,6 +211,158 @@
 }
 
 
+.offer-h1 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #FFFFFF;
+}
+
+
+.offer-content {
+    background-color: #405D78;
+    padding: 51px 94px 51px 94px;
+    /*border: solid 2px salmon;*/
+}
+
+
+/*.offer-container {
+    border: solid 2px salmon;
+}*/
+
+.all-offers {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 64px;
+    row-gap: 64px;
+    grid-auto-rows: 200px;
+    /*
+    justify-content: space-between;
+    align-content: space-around;
+    flex-wrap: wrap;*/
+    margin-top: 32px;  
+    /*border: solid 2px salmon;*/
+}
+
+
+.offer-box {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background-color: #F1F1F1;
+    /*height: 197px;
+    width: 197px;*/
+    height: auto;
+    width: auto;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: black;
+    position: relative;
+}
+
+.offer-box:hover {
+    transform: scale(1.05);
+    transition: all 0.2s ease-out;
+}
+
+
+.offer-box-new {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background-color: #F1F1F1;
+    /*height: 197px;
+    width: 197px;*/
+    height: auto;
+    width: auto;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: black;
+    position: relative;
+    /*żeby ::before pokazał się poprawnie, nie mogło tu być 'overflow:auto'*/
+}
+
+
+.offer-box-new:hover {
+    transform: scale(1.05);
+    transition: all 0.2s ease-out;
+}
+
+
+.offer-box-new::before {
+    content:"";
+    display:block;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    background-color: #E07A64;
+    position:absolute;
+    top: -10px;
+    left: -10px; 
+}
+
+
+/*.offer-box-new::after {
+    content:"(nowość)";
+    display:block;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    position:absolute; 
+}
+
+
+.new-marker {
+    width: 22px;
+    height: 22px;
+    background-color: #E07A64;
+}*/
+
+
+.new-text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+
+.footer-box {
+    display:flex;
+    height: 50px;
+    background-color: #4E4E4E;
+    line-height: 21px;
+    font-weight: 700;
+    font-size: 18px;
+    color:white;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 94px;
+    padding-right: 94px;
+}
+
+
+.icon-box {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+i {
+    margin-left: 18px;
+}
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -222,7 +373,8 @@ body {
 }
 
 
-a { color: inherit;
+a { 
+    color: inherit;
     text-decoration: none;
  } 
 
