--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,29 @@
+html {
+    scroll-behavior: smooth;
+}
+
+
+body { 
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    color: white;
+}
+
+
+a { 
+    color: inherit;
+    text-decoration: none;
+ } 
+
+
+ * {
+    box-sizing: border-box;
+  }
+
+
 .main_div {
-    width: 960px;
+    /*width: 960px;*/
     /*height: 2000px;*/
     /*border: solid 2px salmon;*/
     background-color: #F1F1F1;
@@ -11,13 +35,32 @@
     display:flex;
     height: 50px;
     background-color: #4E4E4E;
-    line-height: 21px;
+    align-content: center;
+    top:0px;
+    position:sticky;
+    z-index: 1000;
+    /*line-height: 21px;
     font-size: 18px;
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
     padding-left: 94px;
-    padding-right: 94px;
+    padding-right: 94px;*/
+}
+
+
+.navbar {
+    width:960px;
+    margin:auto;
+    display:flex;
+    line-height: 21px;
+    font-size: 18px;
+    align-content: center;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    /*padding-left: 94px;
+    padding-right: 94px;*/
 }
 
 
@@ -47,8 +90,14 @@
 }
 
 
+.page-content {
+    /*width: 960px;*/
+    margin:auto;
+}
+
+
 .page-header {
-    height: 100vh;
+    height: calc(100vh - 50px);
     display: flex;
     background: linear-gradient(
         rgba(5, 42, 66, 0.6),
@@ -60,27 +109,32 @@
 
 
 .header-content {
-    display: flex;
-    width: 577px;
-    height: 215px;
-    padding-left: 94px;
-    padding-right: 94px;
-    /*align-items: center;*/
-    flex-direction: column;
-    /*border: solid 2px salmon;*/
-    color:white;
+    margin: auto;
+    width: 960px;
     scroll-behavior: smooth;
+    /*padding-left: 94px;
+    padding-right: 94px;
+    align-items: center;
+    border: solid 2px salmon;
+    color:white;*/
 }
 
 
-.header-content .header-h1,.header-h2 {
+.header-smallbox {
+    display:flex;
+    width:577px;
+    flex-direction: column;
+}
+
+
+.header-h1,.header-h2 {
     margin-bottom: 50px;
 }
 
 
 .offer-button {
     width: 164px;
-    height: 40.74px;
+    height: 41px;
     border: 3px solid #FFFFFF;
     transition: 1s ease-out;
     background-color: transparent;
@@ -98,7 +152,6 @@
 
 
 .header-h1 {
-    font-style: normal;
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -106,7 +159,6 @@
 
 
 .header-h2 {
-    font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 21px;
@@ -122,7 +174,15 @@
 
 
 .about-content {
-    padding: 51px 94px 51px 94px;
+    padding-top: 51px /*94px 51px 94px;*/
+}
+
+
+.employees-container {
+    width:960px;
+    margin: auto;
+    color: black;
+    padding-bottom: 68px;
 }
 
 
@@ -130,7 +190,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 68px;
+    padding-top: 50px;
 }
 
 
@@ -208,6 +268,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 21px;
+    margin-top: 25px;
 }
 
 
@@ -219,28 +280,33 @@
 }
 
 
-.offer-content {
-    background-color: #405D78;
-    padding: 51px 94px 51px 94px;
-    /*border: solid 2px salmon;*/
+
+.offer-container {
+    width: 960px;
+    margin: auto;
+    padding-top: 50px;
 }
 
 
-/*.offer-container {
-    border: solid 2px salmon;
-}*/
+.offer-content {
+    background-color: #405D78;
+    /*padding: 51px 94px 51px 94px;*/
+    /*border: solid 2px salmon;*/
+}
 
 .all-offers {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 64px;
     row-gap: 64px;
-    grid-auto-rows: 200px;
+    grid-auto-rows: 198px;
+    grid-auto-columns: 194px;
     /*
     justify-content: space-between;
     align-content: space-around;
     flex-wrap: wrap;*/
-    margin-top: 32px;  
+    margin-top: 83px;
+    padding-bottom: 64px;  
     /*border: solid 2px salmon;*/
 }
 
@@ -249,9 +315,9 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     background-color: #F1F1F1;
     /*height: 197px;
-    width: 197px;*/
+    width: 197px;
     height: auto;
-    width: auto;
+    width: auto;*/
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
@@ -261,7 +327,6 @@
     align-items: center;
     text-align: center;
     color: black;
-    position: relative;
 }
 
 .offer-box:hover {
@@ -310,23 +375,6 @@
 }
 
 
-/*.offer-box-new::after {
-    content:"(nowość)";
-    display:block;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
-    position:absolute; 
-}
-
-
-.new-marker {
-    width: 22px;
-    height: 22px;
-    background-color: #E07A64;
-}*/
-
-
 .new-text {
     font-weight: 400;
     font-size: 18px;
@@ -335,9 +383,16 @@
 
 
 .footer-box {
-    display:flex;
     height: 50px;
     background-color: #4E4E4E;
+}
+
+
+.footer {
+    display:flex;
+    width: 960px;
+    height:50px;
+    margin: auto;    
     line-height: 21px;
     font-weight: 700;
     font-size: 18px;
@@ -345,8 +400,6 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 94px;
-    padding-right: 94px;
 }
 
 
@@ -363,22 +416,4 @@ i {
 }
 
 
-html {
-    scroll-behavior: smooth;
-}
 
-
-body { 
-    font-family: 'Roboto', sans-serif;
-}
-
-
-a { 
-    color: inherit;
-    text-decoration: none;
- } 
-
-
-* {
-    box-sizing: border-box;
-  }
